<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinate_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/main_toolbar"
            layout="@layout/top_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <include
                    android:id="@+id/quick_text"
                    layout="@layout/header_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <include
                    android:id="@+id/quick_action_layout"
                    layout="@layout/quick_actions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/quick_text" />

                <include
                    android:id="@+id/business_text"
                    layout="@layout/header_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/quick_action_layout" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/business_card"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="5dp"
                    android:elevation="15dp"
                    app:cardCornerRadius="10dp"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/business_text">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp">

                        <TextView
                            android:id="@+id/business_header"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_semibold"
                            android:paddingHorizontal="15dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="22dp"
                            android:text="@string/_02_may_02_aug_24"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/total_policies"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:paddingHorizontal="15dp"
                            android:text="@string/total_policies"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/business_header" />

                        <TextView

                            android:id="@+id/total_gwp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:paddingHorizontal="15dp"
                            android:text="@string/total_gwp"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="@id/total_gwp_count"
                            app:layout_constraintTop_toBottomOf="@id/business_header" />

                        <TextView
                            android:id="@+id/total_policies_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="15dp"
                            android:paddingBottom="5dp"
                            android:text="3,456"
                            android:theme="@style/number_style"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/total_policies"
                            tools:layout_editor_absoluteY="77dp" />

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:paddingBottom="5dp"
                            android:src="@drawable/bar_chart"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:id="@+id/total_gwp_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="15dp"
                            android:paddingBottom="5dp"
                            android:text="₹25.7Cr"
                            android:theme="@style/number_style"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/total_policies"
                            tools:layout_editor_absoluteX="251dp"
                            tools:layout_editor_absoluteY="77dp" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <include
                    android:id="@+id/quote_text"
                    layout="@layout/header_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/business_card" />


                <include
                    android:id="@+id/health_icon"
                    layout="@layout/quote_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:layout_constraintEnd_toStartOf="@+id/motor_icon"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/quote_text" />

                <include

                    android:id="@+id/motor_icon"
                    layout="@layout/quote_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:layout_constraintEnd_toStartOf="@+id/travel_icon"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/health_icon"
                    app:layout_constraintTop_toBottomOf="@id/quote_text" />

                <include

                    android:id="@+id/travel_icon"
                    layout="@layout/quote_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:layout_constraintEnd_toStartOf="@+id/comm_lines_icon"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/motor_icon"
                    app:layout_constraintTop_toBottomOf="@id/quote_text" />

                <include
                    android:id="@+id/comm_lines_icon"
                    layout="@layout/quote_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/travel_icon"
                    app:layout_constraintTop_toBottomOf="@id/quote_text" />

                <HorizontalScrollView
                    android:id="@+id/images_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/comm_lines_icon">


                    <LinearLayout
                        android:id="@+id/scroll_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <include
                            android:id="@+id/image_view_one"
                            layout="@layout/image_card"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="5dp"
                            android:layout_marginVertical="20dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/gaint_step_text" />

                        <include
                            android:id="@+id/image_view_two"
                            layout="@layout/image_card"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="5dp"
                            android:layout_marginVertical="20dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/gaint_step_text" />
                    </LinearLayout>
                </HorizontalScrollView>

                <include
                    android:id="@+id/gaint_step_text"
                    layout="@layout/header_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/images_view" />

                <include
                    android:id="@+id/gaint_step_card"
                    layout="@layout/detailed_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/gaint_step_text" />

                <include
                    android:id="@+id/campaign_text"
                    layout="@layout/header_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/gaint_step_card" />

                <include
                    android:id="@+id/health_header"
                    layout="@layout/sub_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/campaign_text" />

                <include
                    android:id="@+id/health_card"
                    layout="@layout/detailed_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/health_header" />

                <include
                    android:id="@+id/motor_header"
                    layout="@layout/sub_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/health_card" />

                <include
                    android:id="@+id/motor_card"
                    layout="@layout/detailed_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/motor_header" />

                <include
                    android:id="@+id/travel_header"
                    layout="@layout/sub_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/motor_card" />

                <include
                    android:id="@+id/travel_card"
                    layout="@layout/detailed_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/travel_header" />

                <include
                    android:id="@+id/comm_line_header"
                    layout="@layout/sub_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/travel_card" />

                <include
                    android:id="@+id/comm_line_card"
                    layout="@layout/detailed_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/comm_line_header" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:drawerLayoutCornerSize="0dp">

        <LinearLayout
            android:id="@+id/nav_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/nav_header"
                layout="@layout/nav_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ExpandableListView
                android:id="@+id/expandableListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"
                android:indicatorRight="?android:attr/expandableListPreferredItemIndicatorLeft" />

        </LinearLayout>

    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>
